# vol-forecasting-lab

./: .env  README.md  dashboard.html  pyproject.toml  vol_forecasting.wim
scripts/: download_data.py
src/vol_forecasting/: __init__.py  app.py  cli.py
src/vol_forecasting/data/: fetchers.py  loaders.py  schemas.py
src/vol_forecasting/eval/: metrics.py  realized.py  rolling_eval.py
src/vol_forecasting/models/: ewma.py  garch.py  historical.py
src/vol_forecasting/regime/: detector.py
src/vol_forecasting/report/: plots.py
tests/: conftest.py  test_eval.py  test_models.py  test_regime.py
