[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vol-forecasting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "arch>=6.3",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "plotly>=5.18",
    "streamlit>=1.30",
    "duckdb>=0.9",
    "yfinance>=0.2",
    "fredapi>=0.5",
    "python-dotenv>=1.0",
]

[project.scripts]
vol-forecast = "vol_forecasting.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vol_forecasting"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short -q"
